--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://<username>:<password>@cluster.mongodb.net/workoutTracker
+MONGO_URI=mongodb+srv://mohdkhan768:AliKhan2000@cluster.mongodb.net/workoutTracker
 PORT=3000
